--- a/app-of-apps/root-app/my-application.yml
+++ b/app-of-apps/root-app/my-application.yml
@@ -13,9 +13,9 @@ spec:
 
   # Source of the application manifests
   source:
-    repoURL: https://github.com/lmeyemezu/gitops-cert-level-2-examples.git    
+    repoURL: https://github.com/lmeyemezu/gitops-cert-level-2-examples.git 
     targetRevision: HEAD
-    path: ./app-of-apps/my-app-list
+    path: ./app-of-apps/my-app-lis t
    
     # directory
     directory:
